Closed Bug 1632659 Opened 5 years ago Closed 5 years ago

Default browser ping should not be submitted if telemetry is disabled at build time

Categories

(Firefox :: Installer, defect, P1)

Desktop
Windows
defect

Tracking

()

RESOLVED FIXED
Firefox 77
Tracking Status
firefox77 --- fixed

People

(Reporter: molly, Assigned: molly)

References

Details

Attachments

(1 file)

The Firefox telemetry service contains this check of a few different compile-time parameters to disable uploading any pings (but not generating them) in those cases, notably including non-official or development builds. The default browser agent should pick up this logic.

Pushed by mhowell@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/038156a89b10 Don't send the default browser ping in non-official builds. r=bytesized
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 77
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: