Bug 1632659 - Don't send the default browser ping in non-official builds. r=bytesized

Differential Revision: https://phabricator.services.mozilla.com/D72246